{
  "version": 4,
  "terraform_version": "0.12.21",
  "serial": 2699,
  "lineage": "53f7fe5b-e9af-7038-4453-890938ede23b",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "lb-listener",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:381144738155:listener/app/Application-LB/56794b1a8c86e230/fea1f3cd48308f39",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:381144738155:targetgroup/TargetGroup/d6b32509a03aff68",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:381144738155:listener/app/Application-LB/56794b1a8c86e230/fea1f3cd48308f39",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-south-1:381144738155:loadbalancer/app/Application-LB/56794b1a8c86e230",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "timeouts": null
          },
          "dependencies": [
            "aws_alb_target_group.target-group",
            "aws_lb.app-lb",
            "aws_security_group.lb_sg",
            "aws_subnet.dmz_subnet",
            "aws_vpc.prodvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_target_group",
      "name": "target-group",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:381144738155:targetgroup/TargetGroup/d6b32509a03aff68",
            "arn_suffix": "targetgroup/TargetGroup/d6b32509a03aff68",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 15,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 14,
                "unhealthy_threshold": 5
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:381144738155:targetgroup/TargetGroup/d6b32509a03aff68",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "TargetGroup",
            "port": 80,
            "protocol": "HTTP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-07ae66eb6bbfb7fa0"
          },
          "dependencies": [
            "aws_vpc.prodvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_target_group_attachment",
      "name": "register-targets",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-south-1:381144738155:targetgroup/TargetGroup/d6b32509a03aff68-20200321081236801900000004",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:381144738155:targetgroup/TargetGroup/d6b32509a03aff68",
            "target_id": "i-0dae178bc1232acef"
          },
          "dependencies": [
            "aws_alb_target_group.target-group",
            "aws_instance.server",
            "aws_key_pair.auth",
            "aws_security_group.prodsg",
            "aws_subnet.dmz_subnet",
            "aws_subnet.public_subnet",
            "aws_vpc.prodvpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-south-1:381144738155:targetgroup/TargetGroup/d6b32509a03aff68-20200321081236783700000003",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:381144738155:targetgroup/TargetGroup/d6b32509a03aff68",
            "target_id": "i-0fdbf40f4c1b573d2"
          },
          "dependencies": [
            "aws_alb_target_group.target-group",
            "aws_instance.server",
            "aws_key_pair.auth",
            "aws_security_group.prodsg",
            "aws_subnet.dmz_subnet",
            "aws_subnet.public_subnet",
            "aws_vpc.prodvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-0f8ea75374ea2763b",
            "public_dns": "ec2-3-6-136-83.ap-south-1.compute.amazonaws.com",
            "public_ip": "3.6.136.83",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-03f2ccc917ab57b22",
            "public_dns": "ec2-3-7-40-83.ap-south-1.compute.amazonaws.com",
            "public_ip": "3.7.40.83",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "server",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-029401c523b31769e",
            "arn": "arn:aws:ec2:ap-south-1:381144738155:instance/i-0dae178bc1232acef",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0dae178bc1232acef",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "auth",
            "monitoring": false,
            "primary_network_interface_id": "eni-021569a69e439fa50",
            "private_dns": "ip-192-168-4-63.ap-south-1.compute.internal",
            "private_ip": "192.168.4.63",
            "public_ip": "13.232.118.51",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0377220943d5988d6",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-08299d614ae07ab81",
            "tags": {
              "Name": "AppServer_1"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0d25d181780d66d66"
            ]
          },
          "dependencies": [
            "aws_key_pair.auth",
            "aws_security_group.prodsg",
            "aws_subnet.dmz_subnet",
            "aws_subnet.public_subnet",
            "aws_vpc.prodvpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-029401c523b31769e",
            "arn": "arn:aws:ec2:ap-south-1:381144738155:instance/i-0fdbf40f4c1b573d2",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0fdbf40f4c1b573d2",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "auth",
            "monitoring": false,
            "primary_network_interface_id": "eni-044a0e1b923854a7b",
            "private_dns": "ip-192-168-6-166.ap-south-1.compute.internal",
            "private_ip": "192.168.6.166",
            "public_ip": "13.127.210.167",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-07bf05d35d84b8478",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-091a78ba1b5fb1867",
            "tags": {
              "Name": "AppServer_2"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0d25d181780d66d66"
            ]
          },
          "dependencies": [
            "aws_key_pair.auth",
            "aws_security_group.prodsg",
            "aws_subnet.dmz_subnet",
            "aws_subnet.public_subnet",
            "aws_vpc.prodvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "prodgw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-06aaca58cddd3a080",
            "owner_id": "381144738155",
            "tags": {
              "Name": "ProdIGW"
            },
            "vpc_id": "vpc-07ae66eb6bbfb7fa0"
          },
          "dependencies": [
            "aws_vpc.prodvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "app-lb",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:381144738155:loadbalancer/app/Application-LB/56794b1a8c86e230",
            "arn_suffix": "app/Application-LB/56794b1a8c86e230",
            "dns_name": "Application-LB-367771423.ap-south-1.elb.amazonaws.com",
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:ap-south-1:381144738155:loadbalancer/app/Application-LB/56794b1a8c86e230",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "Application-LB",
            "security_groups": [
              "sg-09c508078b03495e9"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-055c3fe5f477a109f"
              },
              {
                "subnet_id": "subnet-0eed1a514ddaa5d7f"
              }
            ],
            "subnets": [
              "subnet-055c3fe5f477a109f",
              "subnet-0eed1a514ddaa5d7f"
            ],
            "tags": {
              "Name": "Application-LoadBalancer"
            },
            "vpc_id": "vpc-07ae66eb6bbfb7fa0",
            "zone_id": "ZP97RAFLXTNZK"
          },
          "dependencies": [
            "aws_security_group.lb_sg",
            "aws_subnet.dmz_subnet",
            "aws_vpc.prodvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "ngw",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f8ea75374ea2763b",
            "id": "nat-02c9089696555e8cf",
            "network_interface_id": "eni-0d2f30e0d6ca08bdc",
            "private_ip": "192.168.5.67",
            "public_ip": "3.6.136.83",
            "subnet_id": "subnet-08299d614ae07ab81",
            "tags": {
              "Name": "Ngw_1"
            }
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_subnet.public_subnet",
            "aws_vpc.prodvpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-03f2ccc917ab57b22",
            "id": "nat-03b2f1e3b68d9b3de",
            "network_interface_id": "eni-0d0e672e56f86c59a",
            "private_ip": "192.168.6.176",
            "public_ip": "3.7.40.83",
            "subnet_id": "subnet-091a78ba1b5fb1867",
            "tags": {
              "Name": "Ngw_2"
            }
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_subnet.public_subnet",
            "aws_vpc.prodvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "dmzroutetable",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-09aa36ca79bbdaf00",
            "owner_id": "381144738155",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-06aaca58cddd3a080",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "DMZRouteTable"
            },
            "vpc_id": "vpc-07ae66eb6bbfb7fa0"
          },
          "dependencies": [
            "aws_internet_gateway.prodgw",
            "aws_vpc.prodvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "privateroutetable",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-06f1e33ddd589a76b",
            "owner_id": "381144738155",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "nat-02c9089696555e8cf",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "PrivateRouteTable_1"
            },
            "vpc_id": "vpc-07ae66eb6bbfb7fa0"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.ngw",
            "aws_subnet.public_subnet",
            "aws_vpc.prodvpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-00bf2be6a6b24dd70",
            "owner_id": "381144738155",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "nat-03b2f1e3b68d9b3de",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "PrivateRouteTable_2"
            },
            "vpc_id": "vpc-07ae66eb6bbfb7fa0"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.ngw",
            "aws_subnet.public_subnet",
            "aws_vpc.prodvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "publicroutetable",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-049dc48b245f40afa",
            "owner_id": "381144738155",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-06aaca58cddd3a080",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "PublicRouteTable"
            },
            "vpc_id": "vpc-07ae66eb6bbfb7fa0"
          },
          "dependencies": [
            "aws_internet_gateway.prodgw",
            "aws_vpc.prodvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "dmz_assoc",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06575409a4c0350eb",
            "route_table_id": "rtb-09aa36ca79bbdaf00",
            "subnet_id": "subnet-055c3fe5f477a109f"
          },
          "dependencies": [
            "aws_internet_gateway.prodgw",
            "aws_route_table.dmzroutetable",
            "aws_subnet.dmz_subnet",
            "aws_vpc.prodvpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bbf4896bf3968179",
            "route_table_id": "rtb-09aa36ca79bbdaf00",
            "subnet_id": "subnet-0eed1a514ddaa5d7f"
          },
          "dependencies": [
            "aws_internet_gateway.prodgw",
            "aws_route_table.dmzroutetable",
            "aws_subnet.dmz_subnet",
            "aws_vpc.prodvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "priv_assoc",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0181077bdebb181d0",
            "route_table_id": "rtb-06f1e33ddd589a76b",
            "subnet_id": "subnet-0346e6d562c9b31f4"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.ngw",
            "aws_route_table.privateroutetable",
            "aws_subnet.private_subnet",
            "aws_subnet.public_subnet",
            "aws_vpc.prodvpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04250e749e18e49db",
            "route_table_id": "rtb-00bf2be6a6b24dd70",
            "subnet_id": "subnet-010b451f31518c346"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.ngw",
            "aws_route_table.privateroutetable",
            "aws_subnet.private_subnet",
            "aws_subnet.public_subnet",
            "aws_vpc.prodvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pub_assoc",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a18bc7cccf3b277d",
            "route_table_id": "rtb-049dc48b245f40afa",
            "subnet_id": "subnet-08299d614ae07ab81"
          },
          "dependencies": [
            "aws_internet_gateway.prodgw",
            "aws_route_table.publicroutetable",
            "aws_subnet.public_subnet",
            "aws_vpc.prodvpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f1e49f3febbd34d1",
            "route_table_id": "rtb-049dc48b245f40afa",
            "subnet_id": "subnet-091a78ba1b5fb1867"
          },
          "dependencies": [
            "aws_internet_gateway.prodgw",
            "aws_route_table.publicroutetable",
            "aws_subnet.public_subnet",
            "aws_vpc.prodvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "lb_sg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:381144738155:security-group/sg-09c508078b03495e9",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-09c508078b03495e9",
            "ingress": [],
            "name": "lb_sg",
            "name_prefix": null,
            "owner_id": "381144738155",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "LB-Sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-07ae66eb6bbfb7fa0"
          },
          "dependencies": [
            "aws_vpc.prodvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "prodsg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:381144738155:security-group/sg-0d25d181780d66d66",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0d25d181780d66d66",
            "ingress": [],
            "name": "prodsg",
            "name_prefix": null,
            "owner_id": "381144738155",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ProdSg"
            },
            "timeouts": null,
            "vpc_id": "vpc-07ae66eb6bbfb7fa0"
          },
          "dependencies": [
            "aws_vpc.prodvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress-rule",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 80,
            "id": "sgrule-2671027938",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0d25d181780d66d66",
            "self": false,
            "source_security_group_id": null,
            "to_port": 80,
            "type": "egress"
          },
          "dependencies": [
            "aws_security_group.prodsg",
            "aws_vpc.prodvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "internal-rule",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-549197000",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-09c508078b03495e9",
            "self": false,
            "source_security_group_id": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "dependencies": [
            "aws_security_group.lb_sg",
            "aws_vpc.prodvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "lb-rule",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 80,
            "id": "sgrule-3248898652",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0d25d181780d66d66",
            "self": false,
            "source_security_group_id": "sg-09c508078b03495e9",
            "to_port": 80,
            "type": "ingress"
          },
          "dependencies": [
            "aws_security_group.lb_sg",
            "aws_security_group.prodsg",
            "aws_vpc.prodvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "pub-rule",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 80,
            "id": "sgrule-1437790822",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-09c508078b03495e9",
            "self": false,
            "source_security_group_id": "sg-0d25d181780d66d66",
            "to_port": 80,
            "type": "egress"
          },
          "dependencies": [
            "aws_security_group.lb_sg",
            "aws_security_group.prodsg",
            "aws_vpc.prodvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "dmz_subnet",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:381144738155:subnet/subnet-055c3fe5f477a109f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "192.168.0.0/23",
            "id": "subnet-055c3fe5f477a109f",
            "map_public_ip_on_launch": false,
            "owner_id": "381144738155",
            "tags": {
              "Name": "dmz_subnet_1"
            },
            "vpc_id": "vpc-07ae66eb6bbfb7fa0"
          },
          "dependencies": [
            "aws_vpc.prodvpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:381144738155:subnet/subnet-0eed1a514ddaa5d7f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "192.168.2.0/23",
            "id": "subnet-0eed1a514ddaa5d7f",
            "map_public_ip_on_launch": false,
            "owner_id": "381144738155",
            "tags": {
              "Name": "dmz_subnet_2"
            },
            "vpc_id": "vpc-07ae66eb6bbfb7fa0"
          },
          "dependencies": [
            "aws_vpc.prodvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:381144738155:subnet/subnet-0346e6d562c9b31f4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "192.168.8.0/23",
            "id": "subnet-0346e6d562c9b31f4",
            "map_public_ip_on_launch": false,
            "owner_id": "381144738155",
            "tags": {
              "Name": "private_subnet_1"
            },
            "vpc_id": "vpc-07ae66eb6bbfb7fa0"
          },
          "dependencies": [
            "aws_vpc.prodvpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:381144738155:subnet/subnet-010b451f31518c346",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "192.168.10.0/23",
            "id": "subnet-010b451f31518c346",
            "map_public_ip_on_launch": false,
            "owner_id": "381144738155",
            "tags": {
              "Name": "private_subnet_2"
            },
            "vpc_id": "vpc-07ae66eb6bbfb7fa0"
          },
          "dependencies": [
            "aws_vpc.prodvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:381144738155:subnet/subnet-08299d614ae07ab81",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "192.168.4.0/23",
            "id": "subnet-08299d614ae07ab81",
            "map_public_ip_on_launch": true,
            "owner_id": "381144738155",
            "tags": {
              "Name": "public_subnet_1"
            },
            "vpc_id": "vpc-07ae66eb6bbfb7fa0"
          },
          "dependencies": [
            "aws_vpc.prodvpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:381144738155:subnet/subnet-091a78ba1b5fb1867",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "192.168.6.0/23",
            "id": "subnet-091a78ba1b5fb1867",
            "map_public_ip_on_launch": true,
            "owner_id": "381144738155",
            "tags": {
              "Name": "public_subnet_2"
            },
            "vpc_id": "vpc-07ae66eb6bbfb7fa0"
          },
          "dependencies": [
            "aws_vpc.prodvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "prodvpc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:381144738155:vpc/vpc-07ae66eb6bbfb7fa0",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/19",
            "default_network_acl_id": "acl-0cf61aa0c6aab8f09",
            "default_route_table_id": "rtb-01223c44e5160e47a",
            "default_security_group_id": "sg-040ae1995cc038e02",
            "dhcp_options_id": "dopt-c550b2ae",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-07ae66eb6bbfb7fa0",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-01223c44e5160e47a",
            "owner_id": "381144738155",
            "tags": {
              "Name": "ProdVPC"
            }
          }
        }
      ]
    }
  ]
}